# AI-Playground

./: README.md  pyproject.toml
anthropic_examples/01_basic/: main.py
anthropic_examples/02_dog_toes/: main.py
bots/04_code_review/: main.py
bots/05_function_calling/: main.py
bots/06_completions/: main.py
bots/07_promptlayer/: main.py
bots/08_scoring/: main.py
bots/11_image_variation/: main.py
bots/12_evaluations/: input-data.json
bots/13_large_text_summary/: bill.txt  main.py
bots/14_large_text_summary_v2/: main.py  ukraine.txt
bots/14_pdf_summary/: main.py
openai_examples/01_basic/: main.py
openai_examples/02_user_input/: main.py
openai_examples/03_continuous_conversation/: main.py
openai_examples/04_code_review/: code.py
openai_examples/06_promptlayer/: main.py
openai_examples/07_prompt_templates/: main.py
openai_examples/07_promptlayer/: main.py
openai_examples/07_scoring/: main.py
openai_examples/08_scoring/: main.py
openai_examples/09_image_generation/: main.py
openai_examples/10_image_variation/: main.py
openai_examples/12_large_text_summary/: main.py  school-meals.txt  woodpecker.txt
openai_examples/13_embeddings/: main.py
openai_examples/14_create_prompt_templates/: chat.py  completion.py
openai_examples/14_embeddings/: main.py
openai_examples/15_publish_templates_with_functions/: main.py
openai_examples/16_create_prompt_templates/: main.py
