[tool.poetry]
name = "ai-playground"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
openai = "^0.27.9"
promptlayer = "^0.2.1"
pypdf2 = "^3.0.1"
anthropic = "^0.3.11"
numpy = "^1.26.0"
langchain = "^0.0.296"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
