[tool.poetry]
name = "ai-playground"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
openai = "^1.13.2"
promptlayer = "^0.4.8"
pypdf2 = "^3.0.1"
anthropic = "^0.16.0"
numpy = "^1.26.0"
langchain = "^0.0.296"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
